# traO-Judge-judge

./: .dockerignore  .env.dev  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  generate-api-crate.sh  generate.sh  pyproject.toml
app/backend_app/: .env.dev  Cargo.toml  DockerFile  Taskfile.yaml  docker-compose.yaml
app/backend_app/src/: di.rs  handler.rs  lib.rs  model.rs  scheduler.rs
app/backend_app/src/handler/: auth.rs  editorial.rs  editorials.rs  github_oauth2.rs  google_oauth2.rs  icon.rs  language.rs  problems.rs  submissions.rs  testcase.rs  traq_oauth2.rs  users.rs
app/backend_app/src/model/: auth.rs  editorials.rs  error.rs  github_oauth2.rs  google_oauth2.rs  language.rs  problems.rs  submissions.rs  testcase.rs  users.rs
app/backend_app/tests/users/: get_users.rs  mod.rs  put_users.rs
app/exec_app/: Cargo.toml
app/exec_app/src/: main.rs
app/judge_control_app/: Cargo.toml  mock.Dockerfile
backend-api/: README.md  (+1 more)
backend_app/: .env.dev  Cargo.toml  LICENSE  README.md
backend_app/.github/: pull_request_template.md
backend_app/.github/workflows/: develop.yml  main.yml
backend_app/docs/: openapi-ui.Dockerfile  openapi.yaml
backend_app/src/: handler.rs  lib.rs  repository.rs  utils.rs
backend_app/src/handler/: authentication.rs  submissions.rs  users.rs
backend_app/src/repository/: jwt.rs  normal_problems.rs  submissions.rs  user_password.rs  users.rs  users_session.rs
backend_app/src/utils/: mail.rs  validator.rs
backend_app/src/utils/validator/: rules.rs  validate_test.rs
backend_app/tests/users/: get_users.rs  put_users.rs
judge-control-app/: Cargo.toml  generate-api-crate.sh
judge-control-app/backend-api-schema/: Cargo.toml  README.md
judge-control-app/backend-api-schema/.openapi-generator/: FILES
judge-control-app/backend-api-schema/docs/: JudgeStatus.md  SubmitResultApi.md  TestResult.md
judge-control-app/judge-api-server/: judge-api.yaml
judge-control-app/judge-api-server/src/: lib.rs  models.rs  types.rs
judge-control-app/src/: custom_file.rs  main.rs  models.rs  text_resource_repository.rs
judge-control-app/src/custom_file/: directory.rs  file_factory.rs  text_file.rs  traits.rs
judge-control-app/src/models/: judge_recipe.rs  judge_result.rs
judge-control-app/src/remote_exec/: ssh.rs  traits.rs
judge-control-app/src/telnet/: traits.rs
judge_control_app/: Cargo.toml
judge_control_app/src/: alert.rs  lib.rs  main.rs
judge_control_app/src/custom_rc/: readonly_file.rs  writable_file.rs
judge_control_app/src/submission_logic/: extra_envs.rs  models.rs
lib/back_judge_grpc/: Cargo.toml
lib/back_judge_grpc/proto/: common.proto  judge.proto  judge_request.proto  judge_response.proto
lib/back_judge_grpc/src/: client.rs  generated.rs  lib.rs  server.rs
lib/backend_domain/: Cargo.toml
lib/backend_domain/src/: lib.rs  model.rs  repository.rs
lib/backend_infra/: Cargo.toml
lib/backend_infra/migrations/: 202502242153_create-table.sql  202503051859_update-nortmal_problems.sql  202503210418_remove_testcase_path.sql  202503212236_add_procedure_table.sql  202504021427_remove_judgecode_path.sql  202504042220_fix_typo.sql  202504042223_add_is_public_column.sql  202504231612_add_testcase_resource_id.sql  202504231628_change_testcase_id.sql  202504240141_add_dep_name.sql  202504301511_add-icon-table.sql  202505221707_add_title_column.sql  202507100924_rename_users_passwords_to_user_authentications_and_add_oauth_methods.sql  202508161538_remove_xLink_and_githubLink.sql  202509082221_change_submission_testcases_id.sql  202509181740_rename_icon_id.sql  202509200014_change_submission_editorial_id_to_uuid.sql  202510101817_move_user_email.sql  202510101821_rename_time_memory.sql  202510171606_remove_submissions_username.sql  202511021200_change_submission_editorial_id_to_uuid.sql  202601061126_change-language-id-type.sql  202601061726_change-memory-mib-to-kib.sql  202601161311_create_solved_count_trigger.sql  202601161531_create_resource_id_counter.sql
lib/backend_infra/src/: external.rs  lib.rs  model.rs  provider.rs  repository.rs
lib/backend_infra_mock/: Cargo.toml  README.md
lib/backend_infra_mock/examples/: basic_usage.rs
lib/backend_infra_mock/src/: auth.rs  lib.rs  mail.rs
lib/backend_usecase/: Cargo.toml
lib/backend_usecase/src/: model.rs  service.rs
lib/grpc_schema/: Cargo.toml  build.rs
lib/grpc_schema/src/: _.rs
lib/job_service/: Cargo.toml  DESIGN.md
lib/job_service/src/: aws.rs  grpc.rs  job_service.rs  lib.rs
lib/jobapi/: Cargo.toml
lib/jobapi/assets/: user_data.sh
lib/jobapi/src/: actor.rs  aws.rs  container.rs  custom_rc.rs  grpc.rs  jobapi.rs  lib.rs  model.rs  submission_logic.rs
lib/judge_core/: Cargo.toml
lib/judge_core/src/: constant.rs  has_cycle.rs  identifiers.rs  job.rs  judge_output.rs  lib.rs  logic.rs  model.rs  problem_registry.rs  procedure.rs  procedure_builder.rs  registered_procedure_converter.rs  runner.rs  writer_schema_transpiler.rs
lib/judge_exec_grpc/: Cargo.toml
lib/judge_exec_grpc/proto/: execute.proto
lib/judge_exec_grpc/src/: generated.rs
lib/judge_infra_mock/: Cargo.toml
lib/judge_infra_mock/src/: dep_name_repository.rs  job_service.rs  lib.rs  multi_proc_problem_registry.rs  one_proc_problem_registry.rs
pylib/traopy/: Cargo.toml
pylib/traopy/example/: README.md
pylib/traopy/src/: lib.rs  local_judge.rs  models.rs  procedure.rs  procedure_builder.rs
pylib/traopy_builder/: .gitignore  Cargo.toml  README.md  pyproject.toml
pylib/traopy_builder/src/: builder.rs  lib.rs  local_judge.rs  procedure_builder.rs  single_judge.rs
pylib/traopy_util/: .gitignore  Cargo.toml  README.md  pyproject.toml
pylib/traopy_util/python/: traopy_util.pyi
pylib/traopy_util/src/: common.rs  lib.rs  v0.rs
traopy/: .gitignore  Cargo.toml  pyproject.toml
traopy/example/: pyproject.toml
traopy/python/traopy/: __init__.py  lowlevel.pyi
traopy/src/: environment.rs  lib.rs  models.rs
traopy/src/models/: dependency.rs  empty_directory.rs  execution.rs  onetime_text.rs  output.rs  resource_kind.rs  runtime_text.rs  script.rs  text.rs
(+346 files in other folders)
