[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4", "v7"] }
anyhow = "1.0"
thiserror = "1.0.63"
byte-unit = "5.1.6"
futures = "0.3.31"
chrono = "0.4.39"
prost = "0.13.4"
prost-types = "0.13.4"
tonic = "0.12.3"
tonic-types = "0.12.3"
tonic-web = "0.12.3"
tonic-build = "0.12.3"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
pyo3-stub-gen = "0.7.0"


[workspace]
members = [
    "lib/jobapi",
    "lib/local_jobapi",
    "lib/local_problem_registry",
    "lib/grpc_schema",
    "lib/judge_core",
    "pylib/traopy", 
    "app/judge_control_app", "lib/local_problem_registry",
]
resolver = "2"
