[project]
name = "traopy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "comavius", email = "comavius@proton.me" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "traopy._lowlevel"
features = ["pyo3/extension-module"]
