[package]
name = "backend_app"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-session = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
bcrypt = { workspace = true }
fancy-regex = { workspace = true }
http-body-util = { workspace = true }
infra = { path = "../../lib/backend_infra" }
jsonwebtoken = { workspace = true }
judge_core = { version = "0.1.0", path = "../../lib/judge_core" }
judge_infra_mock = { path = "../../lib/judge_infra_mock", optional = true }
problem_registry = { path = "../../lib/problem_registry", optional = true }
job_service = { path = "../../lib/job_service", optional = true }
lettre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
usecase = { path = "../../lib/backend_usecase" }
uuid = { workspace = true }

[dev-dependencies]
domain = { path = "../../lib/backend_domain" }

[features]
default = ["dev"]
dev = ["judge_infra_mock"]
prod = ["problem_registry", "job_service"]
