[package]
name = "exec_app"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
flate2 = "1.1.0"
judge_exec_grpc = { path = "../../lib/judge_exec_grpc" }
tokio.workspace = true
tonic.workspace = true
judge_core = { path = "../../lib/judge_core" }
bollard = "0.18.1"
anyhow = "1.0.97"
bytes = "1.10.1"
sha2 = "0.10.8"
