[package]
name = "judge_control_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
judge_core = { path = "../../lib/judge_core" }
judge_infra_mock = { path = "../../lib/judge_infra_mock" }
back_judge_grpc = { path = "../../lib/back_judge_grpc" }
