[package]
name = "back_judge_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tonic-web = { workspace = true }
tonic-build = { workspace = true, optional = true }
anyhow = { workspace = true }
uuid = { workspace = true }
judge_core = { path = "../judge_core" }

[features]
codegen = ["tonic-build"]
