[package]
name = "domain"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-session = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
fancy-regex = { workspace = true }
http-body-util = { workspace = true }
jsonwebtoken = { workspace = true }
judge_core = { path = "../judge_core" }
lettre = { workspace = true }
mockall = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[features]
mockall = ["dep:mockall"]
