[package]
name = "infra"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-session = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
domain = { path = "../backend_domain" }
fancy-regex = { workspace = true }
http-body-util = { workspace = true }
jsonwebtoken = { workspace = true }
judge_core = { path = "../judge_core" }
judge_infra_mock = { path = "../../lib/judge_infra_mock" }
lettre = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dependencies.async-sqlx-session]
branch = "sqlx-0.7"
default-features = false
features = ["mysql"]
git = "https://github.com/maxcountryman/async-sqlx-session.git"
