[package]
name = "grpc_schema"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tonic-web = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
