[package]
name = "grpc_schema"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tonic-web = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
