[package]
name = "job_service"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
again = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-sdk-s3 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
judge_core = { path = "../judge_core" }
judge_exec_grpc = { path = "../judge_exec_grpc" }
problem_registry = { path = "../problem_registry" }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
