[package]
name = "jobapi"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
judge_core = { path = "../judge_core" }
judge_exec_grpc = { path = "../judge_exec_grpc" }
problem_registry = { path = "../problem_registry" }

async-channel = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
base64 = { workspace = true }
aws-sdk-s3 = { workspace = true }
dotenv = { workspace = true }
tonic = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
