[package]
name = "judge_core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde ={ workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }