[package]
name = "judge_core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
serde ={ workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rstest = { workspace = true }
prost = { workspace = true }
