[package]
name = "judge_core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
