[package]
name = "judge_exec_grpc"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
judge_core = { path = "../judge_core" }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-build = { workspace = true, optional = true }
tonic-types = { workspace = true }
tonic-web = { workspace = true }
uuid = { workspace = true }

[features]
codegen = ["tonic-build"]
