[package]
name = "traopy_builder"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
name = "traopy_builder"

[dependencies]
anyhow = { workspace = true }
judge_core = { path = "../../lib/judge_core" }
judge_infra_mock = { path = "../../lib/judge_infra_mock" }
pyo3 = { workspace = true }
pyo3-stub-gen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[features]
abi3 = ["generate-import-lib", "pyo3/abi3-py37"]
generate-import-lib = ["pyo3/generate-import-lib"]
