[project]
name = "traopy_builder"
version = "0.1.1"
description = "Library module for writers of traO-Judge"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "traopy_builder.builder"
features = ["pyo3/extension-module"]
