[project]
name = "traopy_builder"
version = "0.1.1"
description = "Library module for writers of traO-Judge"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = []

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "traopy_builder.builder"
python-source = "python"

[tool.rye]
managed = true
