[package]
name = "traopy_util"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
name = "traopy_util"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
judge_core = { path = "../../lib/judge_core" }
nix = { workspace = true, features = ["process"] }
pyo3 = { workspace = true, features = ["experimental-async", "serde"] }
pyo3-stub-gen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
abi3 = ["generate-import-lib", "pyo3/abi3-py37"]
generate-import-lib = ["pyo3/generate-import-lib"]
