[project]
name = "traopy_util"
version = "0.1.1"
description = "Library module for exec-container environment of traO-Judge"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = []

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "traopy_util.util"
python-source = "python"
